force-app/main/default/objects/Deal_Document__c/Deal_Document__c.object-meta.xml
<CustomObject>
    <label>Deal Document</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Deal Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>