force-app/main/default/objects/Deal_Document__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not being used</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>