force-app/main/default/objects/Deal_Document__c/fields/Added_By__c.field-meta.xml
<CustomField>
    <fullName>Added_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who uploaded this Document</description>
    <label>Added By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documents_Added</relationshipName>
    <type>Lookup</type>
</CustomField>