force-app/main/default/objects/Deal_Document__c/fields/Added_On__c.field-meta.xml
<CustomField>
    <fullName>Added_On__c</fullName>
    <description>The Date the Document was uploaded</description>
    <label>Added On</label>
    <type>DateTime</type>
</CustomField>