force-app/main/default/objects/Deal_Document__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance</label>
    <referenceTo>Advance__c</referenceTo>
    <relationshipLabel>Deal Documents</relationshipLabel>
    <relationshipName>Deal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>