force-app/main/default/objects/Deal_Document__c/fields/Allow_Portal_Review__c.field-meta.xml
<CustomField>
    <fullName>Allow_Portal_Review__c</fullName>
    <formula>Legal_Review__c = TRUE &amp;&amp; Reviewed__c = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Portal Review</label>
    <type>Checkbox</type>
</CustomField>