force-app/main/default/objects/Deal_Document__c/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Appraisal Record that this Deal Document is related</description>
    <label>Appraisal</label>
    <referenceTo>Appraisal__c</referenceTo>
    <relationshipLabel>Deal Documents</relationshipLabel>
    <relationshipName>Deal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>