force-app/main/default/objects/Deal_Document__c/fields/Assignment_Document__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Document is an Assignment</description>
    <inlineHelpText>Indicates that this Document is an Assignment</inlineHelpText>
    <label>Assignment Document</label>
    <type>Checkbox</type>
</CustomField>