force-app/main/default/objects/Deal_Document__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <description>Recorded Details</description>
    <label>Book</label>
    <length>50</length>
    <type>Text</type>
</CustomField>