force-app/main/default/objects/Deal_Document__c/fields/Borrower_Access__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Borrower Access</label>
    <type>Checkbox</type>
</CustomField>