force-app/main/default/objects/Deal_Document__c/fields/Borrower_Term_Sheet_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Term_Sheet_Signature_Date__c</fullName>
    <label>Borrower Term Sheet Signature Date</label>
    <type>DateTime</type>
</CustomField>