force-app/main/default/objects/Deal_Document__c/fields/Box_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_File_Id__c</fullName>
    <label>Box File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>