force-app/main/default/objects/Deal_Document__c/fields/Clear_Result_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Clear_Result_Report_Type__c</fullName>
    <label>Clear Result Report Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>