force-app/main/default/objects/Deal_Document__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Closer from the related Deal</description>
    <inlineHelpText>Closer from the related Deal</inlineHelpText>
    <label>Closer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Documents3</relationshipName>
    <type>Lookup</type>
</CustomField>