force-app/main/default/objects/Deal_Document__c/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once uploaded, Borrower users are unable to view this document</inlineHelpText>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>