force-app/main/default/objects/Deal_Document__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact this Document is related to</description>
    <inlineHelpText>Contact this Document is related to</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Documents</relationshipLabel>
    <relationshipName>Deal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>