force-app/main/default/objects/Deal_Document__c/fields/ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion_Id__c</fullName>
    <label>ContentVersion Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>