force-app/main/default/objects/Deal_Document__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Documents</relationshipLabel>
    <relationshipName>Deal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>