force-app/main/default/objects/Deal_Document__c/fields/Deal_Amount_of_Security_Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deal_Amount_of_Security_Deposit_Paid__c</fullName>
    <formula>Deal__r.Deposit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Amount of Security Deposit Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>