force-app/main/default/objects/Deal_Document__c/fields/Deal_Analyst_Email__c.field-meta.xml
<CustomField>
    <fullName>Deal_Analyst_Email__c</fullName>
    <description>This is for email template when the wire is received.</description>
    <label>Deal Analyst Email</label>
    <type>Email</type>
</CustomField>