force-app/main/default/objects/Deal_Document__c/fields/Deal_Borrower_Email__c.field-meta.xml
<CustomField>
    <fullName>Deal_Borrower_Email__c</fullName>
    <description>This is to send an email to the Borrower once the wire is received.</description>
    <label>Deal Borrower Email</label>
    <type>Email</type>
</CustomField>