force-app/main/default/objects/Deal_Document__c/fields/Deal_Borrower_Entity__c.field-meta.xml
<CustomField>
    <fullName>Deal_Borrower_Entity__c</fullName>
    <description>This is for the  Deal document email template after Wire confirmation is received</description>
    <formula>Deal__r.Borrower_Entity__r.Borrower__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Borrower Entity</label>
    <type>Text</type>
</CustomField>