force-app/main/default/objects/Deal_Document__c/fields/Deal_Borrower_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Borrower_s_Name__c</fullName>
    <formula>Deal__r.Borrower_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Borrower’s Name</label>
    <type>Text</type>
</CustomField>