force-app/main/default/objects/Deal_Document__c/fields/Deal_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Deal_Broker_Email__c</fullName>
    <description>This is to send an email once the wire is received</description>
    <label>Deal Broker Email</label>
    <type>Email</type>
</CustomField>