force-app/main/default/objects/Deal_Document__c/fields/Deal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deal Contact record that this Document is related to</description>
    <inlineHelpText>Deal Contact record that this Document is related to</inlineHelpText>
    <label>Deal Contact</label>
    <referenceTo>Deal_Contact__c</referenceTo>
    <relationshipLabel>Deal Documents</relationshipLabel>
    <relationshipName>Deal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>