force-app/main/default/objects/Deal_Document__c/fields/Deal_Deposit_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Deposit_Collected_Date__c</fullName>
    <formula>Deal__r.Deposit_Collected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Deposit Collected Date</label>
    <type>Date</type>
</CustomField>