force-app/main/default/objects/Deal_Document__c/fields/Deal_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Loan_Number__c</fullName>
    <description>Carries the Deal Loan Number over from the related Deal</description>
    <formula>Deal__r.Deal_Loan_Number__c</formula>
    <label>Deal Loan Number</label>
    <type>Text</type>
</CustomField>