force-app/main/default/objects/Deal_Document__c/fields/Deal_Originator_Email__c.field-meta.xml
<CustomField>
    <fullName>Deal_Originator_Email__c</fullName>
    <description>This is to send the email to the originator once the wire is received</description>
    <label>Deal Originator Email</label>
    <type>Email</type>
</CustomField>