force-app/main/default/objects/Deal_Document__c/fields/Deal_Originator_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Originator_Name__c</fullName>
    <description>This is to send the email when the wire is received</description>
    <formula>Deal__r.Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Originator Name</label>
    <type>Text</type>
</CustomField>