force-app/main/default/objects/Deal_Document__c/fields/Deal_Originator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Deal_Originator_Phone__c</fullName>
    <description>This is to send an email when the wire is received</description>
    <formula>Deal__r.Owner.Phone</formula>
    <label>Deal Originator Phone</label>
    <type>Text</type>
</CustomField>