force-app/main/default/objects/Deal_Document__c/fields/Deal_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Deal_RecordType__c</fullName>
    <formula>Deal__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal RecordType</label>
    <type>Text</type>
</CustomField>