force-app/main/default/objects/Deal_Document__c/fields/Deal_Term_Sheet_Signed__c.field-meta.xml
<CustomField>
    <fullName>Deal_Term_Sheet_Signed__c</fullName>
    <formula>Deal__r.Term_Sheet_Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Term Sheet Signed</label>
    <type>Date</type>
</CustomField>