force-app/main/default/objects/Deal_Document__c/fields/Doc_String__c.field-meta.xml
<CustomField>
    <fullName>Doc_String__c</fullName>
    <formula>Folder_String__c + &apos;|&apos; + TEXT(Document_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc String</label>
    <type>Text</type>
</CustomField>