force-app/main/default/objects/Deal_Document__c/fields/Document_Archived_By_OwnBackup__c.field-meta.xml
<CustomField>
    <fullName>Document_Archived_By_OwnBackup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this document has been archived by OwnBackup.</description>
    <inlineHelpText>Please review the &quot;Archived Data/Files&quot; tab to view the document.</inlineHelpText>
    <label>Document Archived By OwnBackup</label>
    <type>Checkbox</type>
</CustomField>