force-app/main/default/objects/Deal_Document__c/fields/Document_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Document_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Loaded</label>
    <type>Checkbox</type>
</CustomField>