force-app/main/default/objects/Deal_Document__c/fields/Document_Structure_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Structure_Id__c</fullName>
    <externalId>true</externalId>
    <label>Document Structure Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>