force-app/main/default/objects/Deal_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <inlineHelpText>Please use the &quot;Update Folder&quot; button to make changes to the Folder and Document Type.</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Section__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1 – Closing Statement</fullName>
            </value>
            <value>
                <fullName>2 – Settlement Statement</fullName>
            </value>
            <value>
                <fullName>Acquisition Purchase Agreement</fullName>
            </value>
            <value>
                <fullName>Acquisition Questionnaire</fullName>
            </value>
            <value>
                <fullName>Advance Funding Document</fullName>
            </value>
            <value>
                <fullName>Affidavit</fullName>
            </value>
            <value>
                <fullName>Alta Survey</fullName>
            </value>
            <value>
                <fullName>ALT Valuation Review / Letter</fullName>
            </value>
            <value>
                <fullName>AOM / Collateral AOM to Title</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Appraisal Report</fullName>
            </value>
            <value>
                <fullName>Approved Building Plans</fullName>
                <label>Approved building plans</label>
            </value>
            <value>
                <fullName>Architects Agreement</fullName>
            </value>
            <value>
                <fullName>Assignment of Leases, Contracts and Asset-Related Property</fullName>
            </value>
            <value>
                <fullName>Assignment of Management</fullName>
            </value>
            <value>
                <fullName>Assignment of Management Agreement</fullName>
            </value>
            <value>
                <fullName>Assignments</fullName>
            </value>
            <value>
                <fullName>Assurant</fullName>
            </value>
            <value>
                <fullName>Background/Credit</fullName>
            </value>
            <value>
                <fullName>Background and Credit Search</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Background Letter of Explanation</fullName>
            </value>
            <value>
                <fullName>Bank Statements (evidence of collections and bill payment)</fullName>
            </value>
            <value>
                <fullName>Bill of Sale</fullName>
            </value>
            <value>
                <fullName>Bills (Tax, Insurance, Utility, etc.)</fullName>
            </value>
            <value>
                <fullName>Bio / Resume</fullName>
            </value>
            <value>
                <fullName>Black Knight Tax Results</fullName>
            </value>
            <value>
                <fullName>Blank Form Lease</fullName>
            </value>
            <value>
                <fullName>Bonding Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>