force-app/main/default/objects/Deal_Document__c/fields/Download__c.field-meta.xml
<CustomField>
    <fullName>Download__c</fullName>
    <formula>HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+ContentVersion_Id__c, &quot;Download&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download</label>
    <type>Text</type>
</CustomField>