force-app/main/default/objects/Deal_Document__c/fields/Executive_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Executive_Approval_Date__c</fullName>
    <description>Date that this Document was approved by an Executive member of CoreVest</description>
    <inlineHelpText>Date that this Document was approved by an Executive member of CoreVest</inlineHelpText>
    <label>Executive Approval Date</label>
    <type>DateTime</type>
</CustomField>