force-app/main/default/objects/Deal_Document__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date that this Document will expire</description>
    <inlineHelpText>Date that this Document will expire</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>