force-app/main/default/objects/Deal_Document__c/fields/Expiration_Days_After_Upload__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Days_After_Upload__c</fullName>
    <label>Expiration Days After Upload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>