force-app/main/default/objects/Deal_Document__c/fields/Folder_String_Display__c.field-meta.xml
<CustomField>
    <fullName>Folder_String_Display__c</fullName>
    <formula>TEXT(Type__c) + IF(ISBLANK(Text(Section__c)),&apos;&apos;, &apos; - &apos; + TEXT(Section__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folder String Display</label>
    <type>Text</type>
</CustomField>