force-app/main/default/objects/Deal_Document__c/fields/Include_for_Term_Sheet_Approval__c.field-meta.xml
<CustomField>
    <fullName>Include_for_Term_Sheet_Approval__c</fullName>
    <businessOwnerGroup>System_Admins</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>This will make this Deal Doc show as a doc that can be selected when submitting a Deal for Term Sheet approval</description>
    <inlineHelpText>Make this Document show up for selection when submitted a Term Sheet for Approval</inlineHelpText>
    <label>Include for Term Sheet Approval</label>
    <type>Checkbox</type>
</CustomField>