force-app/main/default/objects/Deal_Document__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <formula>IF(ISNULL(Expiration_Date__c), TODAY() &gt;= Expiration_Date__c, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>