force-app/main/default/objects/Deal_Document__c/fields/Is_Viewable__c.field-meta.xml
<CustomField>
    <fullName>Is_Viewable__c</fullName>
    <formula>OR(
    ISBLANK( $User.ContactId ) , 
    AND( !$User.Is_Vendor__c, OR(! Confidential__c,  CreatedById ==  $User.Id )), 
    AND(  $User.Is_Vendor__c, OR( !Private__c,  OR($User.Vendor_Type__c != Uploader_Vendor_Type__c, CreatedById ==  $User.Id  )  )) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Viewable</label>
    <type>Checkbox</type>
</CustomField>