force-app/main/default/objects/Deal_Document__c/fields/Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that External Legal Counsel can review this Document</description>
    <inlineHelpText>Indicates that External Legal Counsel can review this Document</inlineHelpText>
    <label>Legal Review</label>
    <type>Checkbox</type>
</CustomField>