force-app/main/default/objects/Deal_Document__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/ContentDocument/&quot;+Attachment_Id__c+&quot;/view&quot;, &quot;View&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>