force-app/main/default/objects/Deal_Document__c/fields/Loan_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Loan_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Coordinator from the related Deal</description>
    <inlineHelpText>Loan Coordinator from the related Deal</inlineHelpText>
    <label>Loan Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Documents2</relationshipName>
    <type>Lookup</type>
</CustomField>