force-app/main/default/objects/Deal_Document__c/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Originator from the related Deal</description>
    <inlineHelpText>Originator from the related Deal</inlineHelpText>
    <label>Originator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Documents5</relationshipName>
    <type>Lookup</type>
</CustomField>