force-app/main/default/objects/Deal_Document__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <description>Recorded Details</description>
    <label>Page</label>
    <length>50</length>
    <type>Text</type>
</CustomField>