force-app/main/default/objects/Deal_Document__c/fields/Portal_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Portal_Error_Message__c</fullName>
    <label>Portal Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>