force-app/main/default/objects/Deal_Document__c/fields/Post_Closing_Item__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Closing Item</label>
    <referenceTo>Post_Closing_Item__c</referenceTo>
    <relationshipLabel>Deal Documents</relationshipLabel>
    <relationshipName>Deal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>