force-app/main/default/objects/Deal_Document__c/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once uploaded, this Document will only be visible to the Vendor who uploaded it and the Borrower</inlineHelpText>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>