force-app/main/default/objects/Deal_Document__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Property__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Deal Documents</relationshipLabel>
    <relationshipName>Deal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>