force-app/main/default/objects/Deal_Document__c/fields/Property_Closer__c.field-meta.xml
<CustomField>
    <fullName>Property_Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is pulling a user value from Property object, Closer__c field</description>
    <label>Property Closer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Documents6</relationshipName>
    <type>Lookup</type>
</CustomField>