force-app/main/default/objects/Deal_Document__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <formula>TEXT(Property__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property State</label>
    <type>Text</type>
</CustomField>