force-app/main/default/objects/Deal_Document__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not being used</description>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>