force-app/main/default/objects/Deal_Document__c/fields/Recording_Info__c.field-meta.xml
<CustomField>
    <fullName>Recording_Info__c</fullName>
    <label>Recording Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>