force-app/main/default/objects/Deal_Document__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User who reviewed this Document</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>