force-app/main/default/objects/Deal_Document__c/fields/Reviewed_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Contact Record that reviewed a Document</description>
    <inlineHelpText>This is the Contact Record that reviewed a Document</inlineHelpText>
    <label>Reviewed By Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Documents (Reviewed By Contact)</relationshipLabel>
    <relationshipName>Documents_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>