force-app/main/default/objects/Deal_Document__c/fields/Sales_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Sales_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Analyst from the related Deal</description>
    <inlineHelpText>Sales Analyst from the related Deal</inlineHelpText>
    <label>Sales Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Documents4</relationshipName>
    <type>Lookup</type>
</CustomField>