force-app/main/default/objects/Deal_Document__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <inlineHelpText>Please use the &quot;Update Folder&quot; button to make changes to the Folder and Document Type.</inlineHelpText>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Assignments</fullName>
            </value>
            <value>
                <fullName>Background and Credit Search</fullName>
            </value>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Closing Documents</fullName>
            </value>
            <value>
                <fullName>Closing Template</fullName>
            </value>
            <value>
                <fullName>DS Funding Package</fullName>
            </value>
            <value>
                <fullName>Guarantor / Sponsor</fullName>
            </value>
            <value>
                <fullName>IC Memo</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>LDR</fullName>
            </value>
            <value>
                <fullName>Model</fullName>
            </value>
            <value>
                <fullName>Pledgor</fullName>
            </value>
            <value>
                <fullName>Portfolio Level Documents</fullName>
            </value>
            <value>
                <fullName>Principle Loan Documents</fullName>
            </value>
            <value>
                <fullName>Property Level Documents</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Recorded Loan Documents</fullName>
            </value>
            <value>
                <fullName>Submission Documents</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
            <value>
                <fullName>Tax Template</fullName>
            </value>
            <value>
                <fullName>Term Sheet</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Title Policies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>